[project]
name = "advent_of_code"
version = "2023"
description = "My answeres to Advent of Code 2023"
requires-python = ">=3.12"
dependencies = [
    "rich",
    "typer[all]",
    #    "-e .",
]

[project.optional-dependencies]
dev = [
    "cogapp",
    "pytest",
    "pytest-testmon",
    "pytest-watch",
    "black",
    "icecream",
    "mypy",
    "pip-tools",
    "pre-commit",
    "specialist",
    "ruff",
]

[project.urls]
homepage = "https://github.com/bengosney/Advent-Of-Code-2023"
repository = "https://github.com/bengosney/Advent-Of-Code-2023"

[project.scripts]
advent-of-code = "aoc:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 128
target-version = ['py311']

[tool.pycln]
all = true

[tool.ruff]
line-length = 128
target-version = "py312"
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "PL",
    "RUF",
    "ERA",
    "TID",
    "TCH",

    "YTT",
    #"ANN",
    "ASYNC",
    "BLE",
    "B",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "G",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "TD",
    "FIX",
]

[tool.ruff.lint]
ignore = [
    "E203",
    "F821",
    "E211",
    "E741",
    "PLR2004",
    "ERA001",
    "SIM108",
    "B905",
    "B019",
]
